# fem2d

./: CMakeLists.txt  README.md  all.bash
benchmarks/: CMakeLists.txt  README.md
benchmarks/bdb-computation/: CMakeLists.txt  README.md  bdb_classical.cpp  bdb_expanded.cpp  bdb_expanded_full.cpp  main.cpp
data/meshes/: felippa_three_member_truss.msh  quarter_ring2d_1800points_3387cells.msh  smith_plane_strain_5dot2.msh
examples/: CMakeLists.txt  bhatti_example_1dot4.cpp  bhatti_five_member_truss_1dot4.cpp  bhatti_plane_stress_1dot6.cpp  felippa_three_member_truss.cpp  pressurized_cylinder.cpp  smith_plane_strain_5dot2.cpp
src/: libfem2d.h
src/lib/: CMakeLists.txt  constants.h  fem2d.cpp  fem2d.h  linear_elasticity.h  read_mesh.cpp  read_mesh.h  z_test_fem2d.cpp  z_test_read_mesh.cpp  z_test_solid2d.cpp  z_test_truss2d.cpp
zscripts/: bench-bdb-computation.bash
